--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -48,7 +48,20 @@
     "# Use vm_size = \"Standard_D2_V2\" in your provisioning configuration.\n",
     "# max_nodes should be no greater than 4.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "cluster_name = \"cpu-cluster\"\n",
+    "\n",
+    "try:\n",
+    "    compute_target = ComputeTarget(workspace=ws, name=cluster_name)\n",
+    "    print('Found an existing compute target.')\n",
+    "except ComputeTargetException:\n",
+    "    print('No existing compute target found. Creating a new compute target.')\n",
+    "    compute_config = AmlCompute.provisioning_configuration(vm_size='STANDARD_D2_V2', max_nodes=4)\n",
+    "\n",
+    "    compute_target = ComputeTarget.create(ws, cluster_name, compute_config)\n",
+    "\n",
+    "compute_target.wait_for_completion(show_output=True, min_node_count=None, timeout_in_minutes=20)\n",
+    "\n",
+    "print(compute_target.get_status().serialize())"
    ]
   },
   {
@@ -80,19 +93,33 @@
     "import os\n",
     "\n",
     "# Specify parameter sampler\n",
-    "ps = ### YOUR CODE HERE ###\n",
+    "ps = RandomParameterSampling(\n",
+    "     {\n",
+    "        '--C': choice(1,2,4), \n",
+    "        '--max_iter': choice(10,50,100,200)\n",
+    "     }\n",
+    ")\n",
     "\n",
     "# Specify a Policy\n",
-    "policy = ### YOUR CODE HERE ###\n",
+    "policy = BanditPolicy(\n",
+    "           slack_factor = 0.1,\n",
+    "           evaluation_interval = 2\n",
+    ")\n",
     "\n",
     "if \"training\" not in os.listdir():\n",
     "    os.mkdir(\"./training\")\n",
     "\n",
     "# Create a SKLearn estimator for use with train.py\n",
-    "est = ### YOUR CODE HERE ###\n",
+    "est = SKLearn(source_directory='./', compute_target=compute_target, entry_script='train.py')\n",
     "\n",
     "# Create a HyperDriveConfig using the estimator, hyperparameter sampler, and policy.\n",
-    "hyperdrive_config = ### YOUR CODE HERE ###"
+    "hyperdrive_config = HyperDriveConfig(estimator = est,\n",
+    "                             hyperparameter_sampling=ps,\n",
+    "                             policy=policy,\n",
+    "                             primary_metric_name=\"Accuracy\",\n",
+    "                             primary_metric_goal=PrimaryMetricGoal.MAXIMIZE,\n",
+    "                             max_total_runs=40,\n",
+    "                             max_concurrent_runs=4)"
    ]
   },
   {
@@ -103,7 +130,12 @@
    "source": [
     "# Submit your hyperdrive run to the experiment and show run details with the widget.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "hyperdrive_run = exp.submit(hyperdrive_config)\n",
+    "\n",
+    "from azureml.widgets import RunDetails\n",
+    "RunDetails(hyperdrive_run).show()\n",
+    "\n",
+    "hyperdrive_run.wait_for_completion(show_output=True)"
    ]
   },
   {
@@ -126,9 +158,15 @@
    "outputs": [],
    "source": [
     "import joblib\n",
-    "# Get your best run and save the model from that run.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "# Get the best run and save the model from that run.\n",
+    "best_run = hyperdrive_run.get_best_run_by_primary_metric()\n",
+    "best_run_metrics = best_run.get_metrics()\n",
+    "\n",
+    "print('Best run:', best_run)\n",
+    "print('Metrics:', best_run_metrics)\n",
+    "\n",
+    "model = best_run.register_model(model_name='best_hyperdrive_model', model_path='./outputs/model.pkl')"
    ]
   },
   {
@@ -143,7 +181,8 @@
     "# Data is available at: \n",
     "# \"https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv\"\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "data_url = \"https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv\"\n",
+    "ds = TabularDatasetFactory.from_delimited_files(data_url)"
    ]
   },
   {
@@ -165,10 +204,21 @@
    },
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "from train import clean_data\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Use the clean_data function to clean your data.\n",
-    "x, y = clean_data(### YOUR DATA OBJECT HERE ###)"
+    "x, y = clean_data(ds)\n",
+    "\n",
+    "# Join x and y since automl takes a dataset\n",
+    "dataset = x.join(y)\n",
+    "\n",
+    "# Get the default datastore to be entered as a parameter in tabular dataset creation\n",
+    "datastore = ws.get_default_datastore()\n",
+    "\n",
+    "# Change pandas dataframe into a tabular dataset to be used in automl\n",
+    "training_data = TabularDatasetFactory.register_pandas_dataframe(dataset, datastore, \"training_data\")"
    ]
   },
   {
@@ -197,12 +247,13 @@
     "# If you wish to run the experiment longer, you will need to run this notebook in your own\n",
     "# Azure tenant, which will incur personal costs.\n",
     "automl_config = AutoMLConfig(\n",
-    "    experiment_timeout_minutes=30,\n",
-    "    task=,\n",
-    "    primary_metric=,\n",
-    "    training_data=,\n",
-    "    label_column_name=,\n",
-    "    n_cross_validations=)"
+    "    compute_target=compute_target,\n",
+    "    experiment_timeout_minutes = 30,\n",
+    "    task = 'classification',\n",
+    "    primary_metric = 'accuracy',\n",
+    "    training_data = training_data,\n",
+    "    label_column_name = 'y',\n",
+    "    n_cross_validations = 4)"
    ]
   },
   {
@@ -223,7 +274,12 @@
    "source": [
     "# Submit your automl run\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "experiment = Experiment(ws, \"Auto ML Model\")\n",
+    "print(\"Experiment created\")\n",
+    "\n",
+    "automl_run = experiment.submit(config=automl_config, show_output=True)\n",
+    "RunDetails(automl_run).show()\n",
+    "automl_run.wait_for_completion(show_output=True)"
    ]
   },
   {
@@ -234,7 +290,28 @@
    "source": [
     "# Retrieve and save your best automl model.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "best_run, fitted_model = automl_run.get_output()\n",
+    "print(best_run)\n",
+    "print(fitted_model)\n",
+    "best_run_metrics = best_run.get_metrics()\n",
+    "for metric_name in best_run_metrics:\n",
+    "    metric = best_run_metrics[metric_name]\n",
+    "    print(metric_name, metric)\n",
+    "\n",
+    "joblib.dump(value=fitted_model, filename=\"fitted_automl_model.joblib\")\n",
+    "\n",
+    "automl_model = best_run.register_model(model_name='automl_model.pkl', \n",
+    "                                       model_path = './outputs/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete the cluster instance\n",
+    "AmlCompute.delete(compute_target)"
    ]
   }
  ],
