--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -12,8 +12,8 @@
    "source": [
     "from azureml.core import Workspace, Experiment\n",
     "\n",
-    "ws = Workspace.get(name=\"udacity-project\")\n",
-    "exp = Experiment(workspace=ws, name=\"udacity-project\")\n",
+    "ws = Workspace.from_config()\n",
+    "exp = Experiment(workspace=ws, name=\"project-udacity\")\n",
     "\n",
     "print('Workspace name: ' + ws.name, \n",
     "      'Azure region: ' + ws.location, \n",
@@ -43,6 +43,8 @@
    "outputs": [],
    "source": [
     "from azureml.core.compute import ComputeTarget, AmlCompute\n",
+    "from azureml.core.compute_target import ComputeTargetException\n",
+    "\n",
     "\n",
     "# TODO: Create compute cluster\n",
     "# Use vm_size = \"Standard_D2_V2\" in your provisioning configuration.\n",
@@ -83,20 +85,21 @@
    },
    "outputs": [],
    "source": [
+    "from azureml.core import ScriptRunConfig, Environment\n",
     "from azureml.widgets import RunDetails\n",
     "from azureml.train.sklearn import SKLearn\n",
     "from azureml.train.hyperdrive.run import PrimaryMetricGoal\n",
     "from azureml.train.hyperdrive.policy import BanditPolicy\n",
     "from azureml.train.hyperdrive.sampling import RandomParameterSampling\n",
     "from azureml.train.hyperdrive.runconfig import HyperDriveConfig\n",
-    "from azureml.train.hyperdrive.parameter_expressions import uniform\n",
+    "from azureml.train.hyperdrive.parameter_expressions import choice, normal, uniform\n",
     "import os\n",
     "\n",
     "# Specify parameter sampler\n",
     "ps = RandomParameterSampling(\n",
     "     {\n",
     "        '--C': choice(1,2,4), \n",
-    "        '--max_iter': choice(10,50,100,200)\n",
+    "        '--max_iter': choice(10,50,100)\n",
     "     }\n",
     ")\n",
     "\n",
@@ -109,7 +112,7 @@
     "if \"training\" not in os.listdir():\n",
     "    os.mkdir(\"./training\")\n",
     "\n",
-    "# Create a SKLearn estimator for use with train.py\n",
+    "# Create an SKLearn estimator for use with train.py\n",
     "est = SKLearn(source_directory='./', compute_target=compute_target, entry_script='train.py')\n",
     "\n",
     "# Create a HyperDriveConfig using the estimator, hyperparameter sampler, and policy.\n",
@@ -129,7 +132,6 @@
    "outputs": [],
    "source": [
     "# Submit your hyperdrive run to the experiment and show run details with the widget.\n",
-    "\n",
     "hyperdrive_run = exp.submit(hyperdrive_config)\n",
     "\n",
     "from azureml.widgets import RunDetails\n",
@@ -166,7 +168,7 @@
     "print('Best run:', best_run)\n",
     "print('Metrics:', best_run_metrics)\n",
     "\n",
-    "model = best_run.register_model(model_name='best_hyperdrive_model', model_path='./outputs/model.pkl')"
+    "model = best_run.register_model(model_name='hyperdrive_model', model_path='./outputs/model.pkl')"
    ]
   },
   {
@@ -272,9 +274,9 @@
    },
    "outputs": [],
    "source": [
-    "# Submit your automl run\n",
+    "# Submit the automl run\n",
     "\n",
-    "experiment = Experiment(ws, \"Auto ML Model\")\n",
+    "experiment = Experiment(ws, \"automl_model\")\n",
     "print(\"Experiment created\")\n",
     "\n",
     "automl_run = experiment.submit(config=automl_config, show_output=True)\n",
@@ -288,8 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Retrieve and save your best automl model.\n",
-    "\n",
+    "# Retrieve and save the best automl model\n",
     "best_run, fitted_model = automl_run.get_output()\n",
     "print(best_run)\n",
     "print(fitted_model)\n",
