revise train.py and complete readme

--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -13,7 +13,7 @@
     "from azureml.core import Workspace, Experiment\n",
     "\n",
     "ws = Workspace.from_config()\n",
-    "exp = Experiment(workspace=ws, name=\"project-udacity\")\n",
+    "exp = Experiment(workspace=ws, name=\"bima-experiment\")\n",
     "\n",
     "print('Workspace name: ' + ws.name, \n",
     "      'Azure region: ' + ws.location, \n",
@@ -168,7 +168,7 @@
     "print('Best run:', best_run)\n",
     "print('Metrics:', best_run_metrics)\n",
     "\n",
-    "model = best_run.register_model(model_name='hyperdrive_model', model_path='./outputs/model.pkl')"
+    "# model = best_run.register_model(model_name='hyperdrive_model', model_path='./outputs/model.pkl')"
    ]
   },
   {
